--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.1.2",
     "react-dom": "^16.13.1",
     "react-geolocated": "^3.2.0",
+    "react-hook-geolocation": "^1.0.11",
     "react-scripts": "^3.4.4",
     "react-webcam": "^6.0.1"
   },
